# baobab

./: .gitlab-ci.yml  NEWS  README.md  baoram.doap  build_and_run.sh  fast_build_and_run.sh  meson.build
build-aux/flatpak/: freynaldo.baoram.json
data/: baoram.1  baoram.gresource.xml  freynaldo.baoram.desktop.in  freynaldo.baoram.gschema.xml  freynaldo.baoram.metainfo.xml.in  freynaldo.baoram.service.in  gschemas.compiled  meson.build  org.gnome.baobab.desktop.in  org.gnome.baobab.metainfo.xml.in  style.css
data/ui/: baobab-folder-display.ui  baobab-main-window.ui  baobab-time-modified-cell.ui  baoram-contents-cell.ui  baoram-excluded-row.ui  baoram-file-cell.ui  baoram-folder-cell.ui  baoram-folder-display.ui  baoram-location-list.ui  baoram-location-row.ui  baoram-main-window.ui  baoram-name-cell.ui  baoram-pathbar.ui  baoram-pathbutton.ui  baoram-preferences-dialog.ui  baoram-size-cell.ui  baoram-time-modified-cell.ui  baoram-treeview-menu.ui
help/: meson.build
help/C/: index.page  introduction.page  problem-permissions.page  question-trash.page  scan-remote.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hr/: hr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  fy.po  (+68 more)
src/: baobab-location-list.vala  baobab-location.vala  baobab-preferences-dialog.vala  baobab-scanner.vala  baobab-time-modified-cell.vala  baobab-window.vala  baoram-application.vala  baoram-cellrenderers.vala  baoram-chart.vala  baoram-contents-cell.vala  baoram-file-cell.vala  baoram-folder-cell.vala  baoram-folder-display.vala  baoram-location-list.vala  baoram-location.vala  baoram-name-cell.vala  baoram-pathbar.vala  baoram-preferences-dialog.vala  baoram-progress-cell.vala  baoram-ringschart.vala  baoram-scanner.vala  baoram-size-cell.vala  baoram-time-modified-cell.vala  baoram-tree-list-row-sorter.vala  baoram-treemap.vala  baoram-window.vala  main.vala  meson.build
